--- a/UniFiler10/Views/DocumentView.xaml
+++ b/UniFiler10/Views/DocumentView.xaml
@@ -26,7 +26,9 @@
     <!--Background="{StaticResource SystemControlBackgroundBaseLowBrush}"-->
     <Border
         Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}"
-        VerticalAlignment="Center" HorizontalAlignment="Center" 
+        VerticalAlignment="Center" HorizontalAlignment="Center"
+		Background="Transparent"
+		Tapped="OnMainBorder_Tapped"
         Canvas.ZIndex="100"
         BorderThickness="0">
         <!--<Border.Background>
@@ -38,7 +40,7 @@
 
         <Grid>
             <AppBarButton Icon="FullScreen"
-                Visibility="{x:Bind DataContext, Converter={StaticResource IsNotNullToVisible}, Mode=OneWay}"
+				Visibility="{x:Bind IsViewLargeButtonEnabled, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                 Tapped="OnPreview_Tapped"
                 Canvas.ZIndex="150"
                 Style="{StaticResource AppBarButtonRecoloured}"
@@ -47,8 +49,8 @@
                 Opacity="1"
                 HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
-            <AppBarButton Icon="Delete" 
-                Visibility="{x:Bind IsDeleteEnabled, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
+            <AppBarButton Icon="Delete"
+                Visibility="{x:Bind IsDeleteButtonEnabled, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                 Tapped="OnItemDelete_Tapped"
                 Canvas.ZIndex="150"
                 Style="{StaticResource AppBarButtonRecoloured}"
