--- a/UniFiler10/Views/BinderCoverView.xaml
+++ b/UniFiler10/Views/BinderCoverView.xaml
@@ -484,33 +484,30 @@
 								<ColumnDefinition Width="{StaticResource MiniatureWidth_ForGrid}"/>
 							</Grid.ColumnDefinitions>
 
-							<ctl:TextBlockScaler Canvas.ZIndex="200"
+							<Border Canvas.ZIndex="200"
         						VerticalAlignment="Bottom" HorizontalAlignment="Center"
 								Height="{StaticResource MiniatureQuarterHeight}"
-								Width="{StaticResource MiniatureWidth}">
-								<ctl:TextBlockScaler.TextBlock>
-									<TextBlock
+								Width="{StaticResource MiniatureWidth}"
+								Background="{StaticResource VerticalWBrush}">
+								<ctl:TextBlockScaler Canvas.ZIndex="200"
+        							VerticalAlignment="Bottom" HorizontalAlignment="Center"
+									Height="{StaticResource MiniatureQuarterHeight}"
+									Width="{StaticResource MiniatureWidth}">
+									<ctl:TextBlockScaler.TextBlock>
+										<TextBlock
         								Text="{Binding FolderName}"
         								Foreground="{StaticResource FlashyForeground}"
 										TextAlignment="Center"
 										Padding="{StaticResource Thickness4444}"
         								TextWrapping="Wrap"/>
-								</ctl:TextBlockScaler.TextBlock>
-							</ctl:TextBlockScaler>
-							
+									</ctl:TextBlockScaler.TextBlock>
+								</ctl:TextBlockScaler>
+							</Border>
+
 							<local:DocumentView Canvas.ZIndex="100"
 								IsClickSensitive="False"
 								DeleteClicked="OnDocumentView_DeleteClicked"
 								Document="{Binding Document, Mode=OneWay}"/>
-
-							<!--<AppBarButton Icon="Delete"
-								Tapped="OnDeleteFolder_Tapped"
-								Canvas.ZIndex="200"
-								Style="{StaticResource AppBarButtonRecoloured}"
-								IsCompact="True"
-								Foreground="{StaticResource FlashyForeground}"
-								Opacity="1"
-								HorizontalAlignment="Right" VerticalAlignment="Top"/>-->
 						</Grid>
 					</DataTemplate>
 				</ItemsControl.ItemTemplate>
